--- a/Practica2/src/main/resources/templates/addUser.html
+++ b/Practica2/src/main/resources/templates/addUser.html
@@ -48,7 +48,7 @@
                 <label for="permisos" class="form-label" th:text="#{user2}">Permisos</label>
                 <select  class="form-control" id="permisos" name="permisos">
                     <option value=""></option>
-                    <option value="admin">Admin</option>
+                    <option value="ADMIN">Admin</option>
 
                 </select>
             </div>
