--- a/Practica2/src/main/resources/templates/endPoint.html
+++ b/Practica2/src/main/resources/templates/endPoint.html
@@ -171,13 +171,13 @@
 
         <div class="mb-3">
           <label for="exp" class="form-label" th:text="#{form7}" data-live-search="true"Content-Type>Tiempo de expiracion</label>
-          <select list="exp"  class="col-sm-12 form-control" id="exp" name="exp">
-            <datalist id="exp">
-              <option value="hora">1 hora</option>
-              <option value="dia">1 dia</option>
-              <option value="semana">1 semana</option>
-              <option value="mes">1 mes</option>
-              <option value="anno" selected>1 año</option>
+          <select list="ex"  class="col-sm-12 form-control" id="exp" name="exp">
+            <datalist id="ex">
+              <option value="1">1 hora</option>
+              <option value="24">1 dia</option>
+              <option value="168">1 semana</option>
+              <option value="730">1 mes</option>
+              <option value="8760" selected>1 año</option>
             </datalist>
           </select>
         </div>
