--- a/Practica2/src/main/resources/templates/proyecto.html
+++ b/Practica2/src/main/resources/templates/proyecto.html
@@ -36,7 +36,7 @@
 <div class="container-fluid">
     <div  style="width: 80%">
         <div class="card-body" style="width: 80%; margin-left: 9%">
-            <a class="btn btn-primary" th:href="@{addEndpoint(id =${id})}">+ Endpoint</a>
+            <a class="btn btn-primary" th:href="@{addEndpoint}">+ Endpoint</a>
         </div>
         <th:block th:each = "endpoint : ${endpoints}">
             <div class="mx-auto" style="width: 80%">
