--- a/Practica2/src/main/resources/templates/users.html
+++ b/Practica2/src/main/resources/templates/users.html
@@ -49,7 +49,7 @@
                                 <a th:href="@{modUser(id = ${user.id})}" class="btn btn-primary" th:text="#{proyecto1}">Administrar</a>
                             </div>
                             <div class="btn-group me-2" role="group">
-                                <a th:href="@{eliminarEndpoint(id = ${user.id})}" class="btn btn-danger" th:text="#{eliminar}">Eliminar</a>
+                                <a th:href="@{eliminarUser(id = ${user.id})}" class="btn btn-danger" th:text="#{eliminar}">Eliminar</a>
                             </div>
                         </div>
                     </div>
