--- a/Practica2/src/main/resources/templates/endPoint.html
+++ b/Practica2/src/main/resources/templates/endPoint.html
@@ -25,8 +25,18 @@
           <li class="nav-item">
             <a class="nav-link active" th:text="#{header2}" th:href="@{usuarios}">Usuarios</a>
           </li>
+          <span class="nav-link active" th:text="#{lang.change}"></span>:
+
+          <li class="nav-item ">
+            <select id="locales" class="form-control">
+              <option  value="bla"></option>
+              <option value="" th:text="#{lenguaje1}"></option>
+              <option value="en" th:text="#{lenguaje2}"></option>
+            </select>
+          </li>
           <li class="nav-item">
-            <a class="nav-link active" th:text="#{header3}" th:href="@{login}">Iniciar Sesion</a>
+            <a class="nav-link active" th:if="${logged == 'si'}" th:href="@{/logout}">Log-out</a>
+            <a class="nav-link active" th:th:unless="${logged == 'si'}" th:href="@{login}">Log-in</a>
           </li>
         </ul>
       </div>
@@ -146,23 +156,25 @@
         <div class="mb-3">
           <label for="type" class="form-label" th:text="Content-Type" data-live-search="true"Content-Type ></label>
           <select list="content"  class="col-sm-12 form-control" id="type" name="type" required>
-          <datalist id="content">
-            <option value="application/json">application/json</option>
-            <option value="application/xhtml+xml">application/xhtml+xml</option>
-            <option value="application/xml">application/xml</option>
-            <option value="text/csv">text/csv</option>
-            <option value="text/css">ext/css</option>
-            <option value="text/html">text/html</option>
-            <option value="text/plain">text/plain</option>
-            <option value="text/xml">text/xml</option>
-          </datalist>
+            <datalist id="content">
+              <option value="application/json">application/json</option>
+              <option value="application/xhtml+xml">application/xhtml+xml</option>
+              <option value="application/xml">application/xml</option>
+              <option value="text/csv">text/csv</option>
+              <option value="text/css">ext/css</option>
+              <option value="text/html">text/html</option>
+              <option value="text/plain">text/plain</option>
+              <option value="text/xml">text/xml</option>
+            </datalist>
           </select>
         </div>
 
         <div class="mb-3">
           <label for="header" class="form-label" th:text="Headers" data-live-search="true">Headers</label>
-          <textarea class="form-control" id="header" name="header" th:text="${endpoint != null} ? ${endpoint.headers} : ''" required>
+          <textarea class="form-control" id="header" name="header" th:text="${endpoint != null} ? ${endpoint.headers} : ''">
           </textarea>
+          <span th:if="${jsonV != null and jsonV == 'no'}">Conjunto de headers no validos, por favor verificar!</span>
+
         </div>
 
         <div class="mb-3">
@@ -207,6 +219,17 @@
     </div>
   </div>
 </div >
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    $("#locales").change(function () {
+      var selectedOption = $('#locales').val();
+      if (selectedOption != 'bla'){
+        window.location.replace('?lang=' + selectedOption);
+      }
+    });
+  });
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
