--- a/Practica2/src/main/resources/templates/proyecto.html
+++ b/Practica2/src/main/resources/templates/proyecto.html
@@ -25,8 +25,18 @@
                     <li class="nav-item">
                         <a class="nav-link active" th:text="#{header2}" th:href="@{usuarios}">Usuarios</a>
                     </li>
+                    <span class="nav-link active" th:text="#{lang.change}"></span>:
+
+                    <li class="nav-item ">
+                        <select id="locales" class="form-control">
+                            <option  value="bla"></option>
+                            <option value="" th:text="#{lenguaje1}"></option>
+                            <option value="en" th:text="#{lenguaje2}"></option>
+                        </select>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link active" th:text="#{header3}" th:href="@{login}">Iniciar Sesion</a>
+                        <a class="nav-link active" th:if="${logged == 'si'}" th:href="@{/logout}">Log-out</a>
+                        <a class="nav-link active" th:th:unless="${logged == 'si'}" th:href="@{login}">Log-in</a>
                     </li>
                 </ul>
             </div>
@@ -58,6 +68,17 @@
         </th:block>
     </div>
 </div >
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $("#locales").change(function () {
+            var selectedOption = $('#locales').val();
+            if (selectedOption != 'bla'){
+                window.location.replace('?lang=' + selectedOption);
+            }
+        });
+    });
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
