JWT en practica 2, error de docker-compose en practica3 y hazelcast en practica 5
Hazelcast ya se había hecho pero se hizo un revert y no se había agregado de nuevo

--- a/Practica3/src/main/resources/templates/endPoint.html
+++ b/Practica3/src/main/resources/templates/endPoint.html
@@ -161,8 +161,10 @@
 
         <div class="mb-3">
           <label for="header" class="form-label" th:text="Headers" data-live-search="true">Headers</label>
-          <textarea class="form-control" id="header" name="header" th:text="${endpoint != null} ? ${endpoint.headers} : ''" required>
+          <textarea class="form-control" id="header" name="header" th:text="${endpoint != null} ? ${endpoint.headers} : ''">
           </textarea>
+          <span th:if="${jsonV != null and jsonV == 'no'}">Conjunto de headers no validos, por favor verificar!</span>
+
         </div>
 
         <div class="mb-3">
