--- a/Proyecto-Final/WebApp/src/main/resources/templates/registro.html
+++ b/Proyecto-Final/WebApp/src/main/resources/templates/registro.html
@@ -28,39 +28,39 @@
 
             </ul>
             <div class="d-flex">
-                <a aria-current="page" class="btn btn-outline-light m-3" href="#">Log-In</a>
-                <a aria-current="page" class="btn btn-primary m-3" href="#">Registrarse</a>
+                <a aria-current="page" class="btn btn-outline-light m-3" th:href="@{~/login}">Log-In</a>
+                <a aria-current="page" class="btn btn-primary m-3" th:href="@{~/registro}">Registrarse</a>
             </div>
         </div>
     </div>
 </nav>
 
 <div class="card m-auto " style="width: 20rem;">
-    <form>
+    <form th:action="@{~/registro}" method="post">
         <div class="card-body">
             <h5 class="card-title">Registro de Usuario</h5>
             <div class="mb-3">
                 <label class="form-label" for="nombre">Nombre</label>
-                <input class="form-control" id="nombre" placeholder="Nombre" type="text">
+                <input class="form-control" id="nombre" name ="nombre" placeholder="Nombre" type="text">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="telefono">Telefono</label>
-                <input class="form-control" id="telefono" placeholder="XXX-XXX-XXXX" type="text">
+                <input class="form-control" id="telefono" name ="telefono" placeholder="XXX-XXX-XXXX" type="text">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="correo">Correo Electronico</label>
-                <input class="form-control" id="correo" placeholder="nombre@correo.com" type="email">
+                <input class="form-control" id="correo" name ="correo" placeholder="nombre@correo.com" type="email">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="direccion">Direccion</label>
-                <textarea class="form-control" id="direccion" style="resize: none;"></textarea>
+                <textarea class="form-control" id="direccion" name ="direccion" style="resize: none;"></textarea>
             </div>
             <div class="mb-3 text-end">
-                <a class="link" href="#">Ya tienes una cuenta? Inicia Sesion</a>
+                <a class="link" th:href="@{~/login}">Ya tienes una cuenta? Inicia Sesion</a>
             </div>
             <div class="mb-3 text-end">
-                <button class="btn btn-primary" href="#" type="submit">Registrase</button>
-                <a class="btn btn-outline-danger" href="#">Cancelar</a>
+                <button class="btn btn-primary" type="submit">Registrase</button>
+                <a class="btn btn-outline-danger" th:href="@{~/market}">Cancelar</a>
             </div>
         </div>
 </div>
