--- a/Proyecto-Final/WebApp/src/main/resources/templates/estadisticas.html
+++ b/Proyecto-Final/WebApp/src/main/resources/templates/estadisticas.html
@@ -10,6 +10,57 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
 
     <title>PUCCM Eventos</title>
+
+    <script  th:inline="javascript">
+        $(document).ready(function(){
+            drawChart()
+        })
+        function generarGrafico(data){
+            data = data.replace(/{|}/gi, '')
+            var b = data.split(',')
+            var culpaDeThymeleaf = ["Servicio","Cantidad"]
+            var res = []
+            res.push(culpaDeThymeleaf)
+
+            if(b[0] === ""){
+                res.push(["No hay ventas",1])
+                console.log("Shees")
+                return res
+            }
+            for(var i = 0; i < b.length; i++){
+                var arr = []
+                var aux = b[i].split("=")
+                arr.push(aux[0],parseInt(aux[1]))
+                res.push(arr)
+            }
+
+            console.log(res)
+            return res
+            }
+        </script>
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+
+    <script  th:inline="javascript" >
+        google.charts.load('current', {'packages':['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
+    
+        function drawChart() {
+            var variable = /*[[${estats}]]*/ 'default'
+            datos = generarGrafico(variable)
+            console.log(variable)
+            var data = google.visualization.arrayToDataTable(datos);
+    
+            var options = {
+                title: 'Servicios Vendidos'
+            };
+    
+            var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+    
+            chart.draw(data, options);
+        }
+    </script>
+
 </head>
 <body>
 <!--NavBar-->
@@ -29,7 +80,7 @@
                                 <a aria-current="page" class="nav-link active" th:href="@{~/usuarios/todos}">Usuarios</a>
                             </li>
                             <li class="nav-item">
-                                <a aria-current="page" class="nav-link active" th:href="@{~/estadisticas}">Estadisticas</a>
+                                <a aria-current="page" class="nav-link active" th:href="@{~/estadisticas/todos}">Estadisticas</a>
                             </li>
                         </div>
     
@@ -66,8 +117,22 @@
         </div>
     </div>
 </nav>
+
+<div class="m-auto" id="piechart" style="width: 90%; height: 500px;"></div>
+
 <div style="margin-left: 6rem; margin-right: 6rem;">
     <h3 class="mt-3">Historial de compras</h3>
+    <div class="dropdown">
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            Filtrar resultados por fecha
+          </a>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" th:href="@{~/estadisticas/hoy}">Realizados hoy</a></li>
+            <li><a class="dropdown-item" th:href="@{~/estadisticas/pasadas}">Pasados</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" th:href="@{~/estadisticas/todos}">Todos</a></li>
+        </ul>
+      </div>
     <th:block th:each = "compra : ${compras}">
 
         <div class="card" style="margin: 1rem 0 1rem 2rem; width: 95%;">
@@ -75,10 +140,7 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title" th:text="'Fecha de Compra - '+ ${compra.fecha}"></h5>
-
-                        <div th:if="${user.permiso != 'CLIENTE'}">
-                            <h5 class="card-subtitle mb-2" th:text="'Codigo - ' + ${compra.idCompra}"></h5>
-                        </div>
+                        <h5 class="card-subtitle mb-2" th:text="'Codigo - ' + ${compra.idCompra}"></h5>
                         <th:block th:each = "evento : ${compra.eventos}">
                             <h6 class="card-subtitle mb-2 text-muted" th:text="'Sesión para ' + ${evento.nombre} + '('+ ${evento.cantidad} +') - RD$ ' + ${evento.precio}"></h6>
                         </th:block>
@@ -92,9 +154,14 @@
 
     </th:block>
 
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script crossorigin="anonymous"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script crossorigin="anonymous"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+            
+
+
 </body>
 </html>
