--- a/Proyecto-Final/WebApp/src/main/resources/templates/market.html
+++ b/Proyecto-Final/WebApp/src/main/resources/templates/market.html
@@ -22,12 +22,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item">
+                <div class="d-flex">
                     <a aria-current="page" class="nav-link active" th:href="@{~/market}">Servicios</a>
                     <div th:if="${user != null}">
                         <div th:if="${user.permiso == 'ADMIN'}">
                             <a aria-current="page" class="btn btn-outline-light m-3" th:href="@{~/usuarios/todos}">Usuarios</a>
-                            <a aria-current="page" class="btn btn-outline-light m-3" th:href="@{~/estadisticas}">Estadisticas</a>
+                            <a aria-current="page" class="nav-link active" th:href="@{~/estadisticas/todos}">Estadisticas</a>
                         </div>
     
                         <div th:if="${user.permiso == 'CLIENTE'}">
@@ -40,7 +40,7 @@
                         </div>
 
                     </div>    
-                </li>
+                </div>
 
             </ul>
             <div class="d-flex">
@@ -48,6 +48,10 @@
                     <a aria-current="page" class="btn btn-outline-light m-3" th:href="@{~/logout}">Cerrar Sesion<a>
                  </div>
                  <div th:unless="${user != null}">
+                    <div th:if="${user.nombre != null}">
+                        <a aria-current="page" class="btn btn-outline-light m-3" th:href="@{~/logout}">Cerrar Sesion<a>    
+                    </div>
+                    
                     <a aria-current="page" class="btn btn-outline-light m-3" th:href="@{~/login}">Log-In</a>
                     <a aria-current="page" class="btn btn-primary m-3" th:href="@{~/registro}">Registrarse</a>
                  </div>
