--- a/Proyecto-Final/WebApp/src/main/resources/templates/estadisticas.html
+++ b/Proyecto-Final/WebApp/src/main/resources/templates/estadisticas.html
@@ -73,27 +73,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <div class="d-flex">
+
                     <a aria-current="page" class="nav-link active" th:href="@{~/market}">Servicios</a>
                     <div th:if="${user != null}">
                         <div th:if="${user.permiso == 'ADMIN'}">
-                            <li class="nav-item">
                                 <a aria-current="page" class="nav-link active" th:href="@{~/usuarios/todos}">Usuarios</a>
-                            </li>
-                            <li class="nav-item">
                                 <a aria-current="page" class="nav-link active" th:href="@{~/estadisticas/todos}">Estadisticas</a>
-                            </li>
                         </div>
     
                         <div th:if="${user.permiso == 'CLIENTE'}">
-                            <li class="nav-item">
                                 <a aria-current="page" class="nav-link active" th:href="@{~/carrito}">Carrito</a>
-                            </li>
-                            <li class="nav-item">
                                 <a aria-current="page" class="nav-link active" th:href="@{~/historial}">Historial</a>
-                            </li>
 
                             </div>
-
+                            </div>
                         <div th:if="${user.permiso == 'EMPLEADO'}">
                             <li class="nav-item">
                                 <a aria-current="page" class="btn btn-outline-light m-3" th:href="@{~/historial}">Historial</a>
