--- a/Proyecto-Final/WebApp/src/main/resources/templates/usuario.html
+++ b/Proyecto-Final/WebApp/src/main/resources/templates/usuario.html
@@ -26,7 +26,7 @@
                     <a aria-current="page" class="nav-link active" th:href="@{~/market}">Servicios</a>
                     <div th:if="${user != null}">
                         <div th:if="${user.permiso == 'ADMIN'}">
-                            <a aria-current="page" class="btn btn-outline-light m-3" th:href="@{~/usuarios/todos}">Usuarios</a>
+                            <a aria-current="page" class="nav-link active" th:href="@{~/usuarios/todos}">Usuarios</a>
                             <a aria-current="page" class="nav-link active" th:href="@{~/estadisticas/todos}">Estadisticas</a>
                         </div>
 
@@ -56,7 +56,7 @@
                     <div class="mb-3">
                         <label class="form-label" for="nombre">Nombre</label>
                         <input name="nombre" class="form-control" id="nombre" th:value ="${usuario.nombre}" type="text">
-                        <input type="number" th:value = "${usuario.id}" hidden>
+                        <input type="number" th:value = "${usuario.id}" hidden name="id">
                     </div>
                 </div>
 
@@ -77,7 +77,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label" for="correo">Correo Electronico</label>
-                <input class="form-control" id="correo" th:value ="${usuario.correo}" type="email" disabled>
+                <input class="form-control" id="correo" th:value ="${usuario.correo}" type="email" disabled name="correo">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="direccion">Direccion</label>
